# Flexible-GJK-and-EPA

./: CMakeLists.txt  LICENSE  README.md  TODO
.github/workflows/: runTests.yml
Lib/: CMakeLists.txt
Lib/header/: Coordinate.h  Error.h  GjkEpa.h
Lib/header/shape/: ConvexCloud.h  ConvexDecorator.h  ConvexShape.h  RoundDecorator.h  TransformDecorator.h
Lib/src/: Epa.cpp  Epa.h  GjkEpa.cpp  GjkPlex.cpp  GjkPlex.h  Hull.cpp  Hull.h  Logger.h  Plex.cpp  Plex.h
Lib/src/shape/: RoundDecorator.cpp  TransformDecorator.cpp
Samples/: CMakeLists.txt  Plotter.py  Sample00.cpp  Sample01.cpp  Sample02.cpp  Sample03.cpp  Utils.cpp  Utils.h  Visualize01.py  Visualize02.py
cmake/: FetchDependency.cmake
content/: Makefile
content/Result_visualization/: Log_JSON  Main.py  Sample_01_Log_01  Sample_01_Log_02  Sample_01_Log_03  Sample_01_Log_04  Sample_02_Log_01  Sample_02_Log_02  Sample_03_Log
content/Sample_01/: Main_01.cpp
content/Sample_02/: Main_02.cpp
content/Sample_03/: Main_03.cpp
content/src/: GJK_EPA.cpp  GJK_EPA.h  Hull.h  Result_Log.h  Vector3d_basic.h
doc/: GJK_EPA.tex  doc_gen.bat
doc/image/: EPA_sample.pdf_tex  GJK_sample.pdf_tex  Mink_diff.pdf_tex  Support.pdf_tex  Support_rototrasl.pdf_tex  XYZ_angles.pdf_tex  closest_example.pdf_tex  closest_segment.pdf_tex  closest_tetra.pdf_tex  closest_triangle.pdf_tex  convexity.pdf_tex  facets_cone.pdf_tex  homog.pdf_tex  penetration_vector.pdf_tex  tetra_origin.pdf_tex
samples/: CMakeLists.txt  Logger.cpp  Logger.h  Plotter.py  Readme.cpp  Sample01.cpp  Sample02.cpp  Sample03.cpp  Sample04.cpp  Utils.cpp  Utils.h  Visualize.py  Visualize03.py
src/: CMakeLists.txt
src/header/Flexible-GJK-and-EPA/: Commons.h  CoordinatePair.h  Diagnostic.h  Error.h  GjkEpa.h
src/header/Flexible-GJK-and-EPA/epa/: EpaHull.h
src/header/Flexible-GJK-and-EPA/gjk/: Plex.h
src/header/Flexible-GJK-and-EPA/shape/: ConvexCloud.h  ConvexDecorator.h  ConvexShape.h  PointCloud.h  RoundDecorator.h  Sphere.h  TransformDecorator.h
src/src/: Commons.cpp  Commons.h  Diagnostic.cpp  Diagnostic.h  Diagnostic.py  Epa.cpp  Epa.h  Gjk.cpp  Gjk.h  GjkEpa.cpp  GjkPlex.cpp  GjkPlex.h  Logger.cpp  Logger.h  Plex.cpp  Plex.h
src/src/epa/: Epa.cpp  Epa.h  EpaHull.cpp  EpaHull.h
src/src/gjk/: Gjk.cpp  Gjk.h  Plex.cpp  Plex.h
src/src/shape/: RoundDecorator.cpp  Sphere.cpp  TransformDecorator.cpp
tests/: CMakeLists.txt  Decorators.cpp  Prisms.cpp  RotoTraslatedShapes.cpp  RoundedShapes.cpp  Support.cpp  Traslations.cpp  Utils.cpp  Utils.h  UtilsMore.cpp  UtilsMore.h
utils/: CMakeLists.txt  Utils.cpp  Utils.h  Visualize.py
